--- a/package.json
+++ b/package.json
@@ -4,5 +4,18 @@
   "main": "index.js",
   "repository": "https://github.com/no6v/v-calendar-issues-502.git",
   "author": "Nobuhiro IMAI <nov@yo.rim.or.jp>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "v-calendar": "^1.0.8",
+    "vue": "^2.6.11"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.3",
+    "@babel/plugin-transform-runtime": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "babel-loader": "^8.1.0",
+    "vue-loader": "^15.9.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
